build files & etc

--- a/Uarung.Web/Views/Transaction/SalesRegister.cshtml
+++ b/Uarung.Web/Views/Transaction/SalesRegister.cshtml
@@ -81,7 +81,7 @@
 
 @section ScriptFooter
 {
-    <script type="text/javascript" src="~/lib/vue.js"></script>
+    <script type="text/javascript" src="~/lib/vue.min.js"></script>
     <script type="text/javascript" src="~/lib/axios.min.js"></script>
     <script type="text/javascript" src="~/lib/sweetalert.min.js"></script>
 
