--- a/Uarung.Web/Views/Shared/_Layout.cshtml
+++ b/Uarung.Web/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                 new
                 {
                     Name = "Product",
-                    FeatherIcon = "file",
+                    FeatherIcon = "tag",
                     RoutePath = Url.Action("Index", "Product")
                 },
                 new
