--- a/Uarung.Web/Views/Discount/Edit.cshtml
+++ b/Uarung.Web/Views/Discount/Edit.cshtml
@@ -11,31 +11,37 @@
     </script>
 }
 
-<div class="d-flex mb-5">
+<div class="d-flex mb-3">
     <h3 class="mr-auto">Edit Discount</h3>
 </div>
 
 <div class="row">
     <div class="col-6">
-        <form action="@Url.Action("InsertOrUpdate")" method="POST">
+        <form action="@Url.Action("InsertOrUpdate")" method="POST" autocomplete="off">
             <input type="hidden" name="mode" value="update"/>
-            <div class="form-group">
-                <label>Code</label>
-                <input type="text" name="code" class="form-control" maxlength="20" value="@Model.Code" readonly required/>
-            </div>
-            <div class="form-group">
-                <label>Type</label>
-                <select class="form-control" name="type" required>
-                    <option value=""></option>
-                    @foreach (var t in new[] {Constant.DiscountType.Amount, Constant.DiscountType.Percentage})
-                    {
-                        var selected = t.Equals(Model.Type);
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label>Code</label>
+                        <input type="text" name="code" class="form-control" maxlength="20" value="@Model.Code" readonly required/>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label>Type</label>
+                        <select class="form-control" name="type" required>
+                            <option value=""></option>
+                            @foreach (var t in new[] {Constant.DiscountType.Amount, Constant.DiscountType.Percentage})
+                            {
+                                var selected = t.Equals(Model.Type);
 
-                        <option value="@t" data-selected="@(selected ? "true" : "")">
-                            @t
-                        </option>
-                    }
-                </select>
+                                <option value="@t" data-selected="@(selected ? "true" : "")">
+                                    @t
+                                </option>
+                            }
+                        </select>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label>Value</label>
