--- a/Uarung.Web/Views/Home/Index.cshtml
+++ b/Uarung.Web/Views/Home/Index.cshtml
@@ -4,30 +4,50 @@
     ViewData[Constant.ViewDataKey.Title] = "Home Page";
 }
 
+@section ScriptHeader
+{
+    <style>
+        .dashboard-widget svg {
+            width: 24px;
+            height: 24px;
+        }
+    </style>
+}
+
 <div class="row mb-5">
     <div class="col-md-6 offset-md-3">
         <h4 class="mb-4">Hello @Model.UserName, Here's how today is</h4>
         
         <div class="row mb-3">
             <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="mb-1">Total Sales</p>
-                        <h5>@Model.TotalSales.ToString("N0")</h5>
+                <div class="card dashboard-widget bg-light">
+                    <div class="card-body d-flex align-items-center">
+                        <span class="text-black-50">
+                            <span data-feather="dollar-sign"></span>
+                        </span>
+                        <div class="d-inline-block pl-3 ml-3 border-left">
+                            <p class="mb-1">Total Sales</p>
+                            <h5 class="mb-0">@Model.TotalSales.ToString("N0")</h5>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="mb-1">Total Transaction</p>
-                        <h5>@Model.TotalTransaction</h5>
+                <div class="card dashboard-widget bg-light">
+                    <div class="card-body d-flex align-items-center">
+                        <span class="text-black-50">
+                            <span data-feather="credit-card"></span>
+                        </span>
+                        <div class="d-inline-block pl-3 ml-3 border-left">
+                            <p class="mb-1">Total Transaction</p>
+                            <h5 class="mb-0">@Model.TotalTransaction</h5>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         
-        <div class="card">
+        <div class="card bg-light">
             <div class="card-body">
                 <p class="mb-1">Top Selling</p>
                 @if (Model.TopSellings.Any())
