--- a/Uarung.Web/Views/Product/Add.cshtml
+++ b/Uarung.Web/Views/Product/Add.cshtml
@@ -4,13 +4,13 @@
     ViewData[Constant.ViewDataKey.Title] = "Add Product";
 }
 
-<div class="d-flex mb-5">
+<div class="d-flex mb-3">
     <h3 class="mr-auto">Add Product</h3>
 </div>
 
 <div class="row">
     <div class="col-6">
-        <form action="@Url.Action("Insert")" method="POST" enctype="multipart/form-data">
+        <form action="@Url.Action("Insert")" method="POST" enctype="multipart/form-data" autocomplete="off">
             <div class="form-group">
                 <label>Category</label>
                 <select class="form-control" name="categoryId" required="">
@@ -24,13 +24,19 @@
                     }
                 </select>
             </div>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" name="name" class="form-control" required/>
-            </div>
-            <div class="form-group">
-                <label>Price</label>
-                <input type="number" name="price" class="form-control" required/>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" name="name" class="form-control" required/>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label>Price</label>
+                        <input type="number" name="price" class="form-control" required/>
+                    </div>  
+                </div>
             </div>
             <div class="form-group">
                 <label>Images</label>
