--- a/Uarung.Web/Views/Product/Edit.cshtml
+++ b/Uarung.Web/Views/Product/Edit.cshtml
@@ -53,7 +53,7 @@
 
 <div class="row">
     <div class="col-6">
-        <form action="@Url.Action("Update")" method="POST" enctype="multipart/form-data">
+        <form action="@Url.Action("Update")" method="POST" enctype="multipart/form-data" autocomplete="off">
             <input type="hidden" name="id" value="@Model.Product.Id"/>
             <div class="form-group">
                 <label>Category</label>
@@ -72,13 +72,19 @@
                     }
                 </select>
             </div>
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" name="name" class="form-control" value="@Model.Product.Name" required/>
-            </div>
-            <div class="form-group">
-                <label>Price</label>
-                <input type="number" name="price" class="form-control" value="@Model.Product.Price" required/>
+            <div class="row">
+                <div class="col">
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" name="name" class="form-control" value="@Model.Product.Name" required/>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-group">
+                        <label>Price</label>
+                        <input type="number" name="price" class="form-control" value="@Model.Product.Price" required/>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <label>Images</label>
