--- a/Uarung.Web/Views/User/Add.cshtml
+++ b/Uarung.Web/Views/User/Add.cshtml
@@ -17,11 +17,11 @@
 }
 
 <div class="row mb-5">
-    <div class="col-6 offset-3">
+    <div class="col-md-6">
         <div class="d-flex mb-3">
             <h3 class="mr-auto">Add User</h3>
         </div>
-        <form action="@Url.Action("Submit")" method="POST" role="form">
+        <form action="@Url.Action("Submit")" method="POST" role="form" autocomplete="off">
             <div class="form-group">
                 <label>Full Name</label>
                 <input type="text" name="Name" class="form-control" required/>
